--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,6 +3,9 @@ backend:
   repo: nicolasguarini/nicolasguarini
   branch: master # Branch to update (optional; defaults to master)
 
+media_folder: static/img
+public_folder: /img
+
 collections:
   ###----PAGINE---###
   #PROGETTI
