Bugfix and minor changes

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,13 +16,13 @@ collections:
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
-      - {label: 'isAProject', name: "isAProject", widget: "hidden", default: "true"}
-      - {label: 'type', name: 'type', widget: "hidden", default: "page"}
-      - {label: "layout", name: "layout", widget: hidden", default: "project"}
+      - {name: "isAProject", widget: "hidden", default: "true"}
+      - {name: 'type', widget: "hidden", default: "page"}
+      - {name: "layout", widget: hidden", default: "project"}
       - {label: "Service", name: "service", widget: "string"}
       - {label: "Started", name: "started", widget: "string"}
       - {label: "Completed", name: "completed", widget: "string"}
       - {label: "Github link", name: "github", widget: "string"}
       - {label: "Project link", name: "projectLink", widget: "string"}
       - {label: "Preview", name: "preview", widget: "string"}
-      - {label: "Description", name: "descrition", widget: "string"} 
+      - {label: "Description", name: "description", widget: "string"} 
