--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
   repo: nicolasguarini/nicolasguarini
-  branch: master # Branch to update (optional; defaults to master)
 
 media_folder: static/img
 public_folder: /img
