--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,7 +16,7 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string' }
       - {name: "isAProject", widget: "hidden", default: "true"}
       - {name: 'type', widget: "hidden", default: "page"}
-      - {name: "layout", widget: hidden", default: "project"}
+      - {name: "layout", widget: "hidden", default: "project"}
       - {label: "Service", name: "service", widget: "string"}
       - {label: "Started", name: "started", widget: "string"}
       - {label: "Completed", name: "completed", widget: "string"}
