--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -24,3 +24,10 @@ collections:
       - {label: "Project link", name: "projectLink", widget: "string"}
       - {label: "Preview", name: "preview", widget: "string"}
       - {label: "Description", name: "description", widget: "string"} 
+      - label: "Featured Image"
+        name: "thumbnail"
+        widget: "image"
+        default: "/images/default.jpg"
+        media_library:
+          config:
+            multiple: false
