--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.24.57",
+    "gatsby": "^2.31.1",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.3.2",
     "gatsby-plugin-offline": "^3.0.41",
@@ -20,7 +20,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-netlify-form": "^2.1.5"
+    "react-netlify-form": "^2.1.5",
+    "react-wow": "^1.0.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
