--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nicolasguarini",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,8 +11,19 @@
   "dependencies": {
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "gray-matter": "^4.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.8.4"
   }
 }
