--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "autoprefixer": "^10.4.13",
