--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "gray-matter": "^4.0.3",
-    "next": "13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "typewriter-effect": "^2.19.0",
