--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "typewriter-effect": "2.19.0"
+    "typewriter-effect": "2.19.0",
+    "wow.js": "^1.2.2"
   }
 }
