--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,12 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
-    "next": "13.4.19",
+    "next": "^14.2.4",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3",
     "typewriter-effect": "2.19.0"
   },
   "devDependencies": {
