--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "8.4.29",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-portable-text": "^0.6.0",
     "sanity": "^3.52.4",
     "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.4",
