--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-portable-text": "^0.6.0",
+    "react-share": "^5.1.0",
     "sanity": "^3.52.4",
     "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.4",
