--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.2",
+    "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "next": "^14.2.4",
     "next-sanity": "^9.4.3",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-portable-text": "^0.6.0",
