--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@portabletext/react": "^3.0.7",
     "@sanity/client": "^6.4.11",
+    "@sanity/code-input": "^4.1.4",
     "@sanity/image-url": "^1.0.2",
     "@sanity/structure": "^2.36.2",
     "@sanity/vision": "^3.52.4",
@@ -32,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-portable-text": "^0.6.0",
     "react-share": "^5.1.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sanity": "^3.52.4",
     "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.4",
@@ -39,6 +41,7 @@
     "typewriter-effect": "2.19.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.29.5-appdir.0"
+    "@netlify/plugin-nextjs": "^4.29.5-appdir.0",
+    "@types/react-syntax-highlighter": "^15.5.13"
   }
 }
